--- a/styles/hide-menu.css
+++ b/styles/hide-menu.css
@@ -152,8 +152,8 @@
 
 .hide_item:hover {
   background: rgba(255, 255, 255, 0.10);
-
   background-blend-mode: overlay;
+  transition: all .5s ease;
 }
 
 .item_left_wrap {
@@ -183,19 +183,33 @@
 }
 
 .hide_item_descr {
+  /* width: 100%; */
   font-family: Neue Montreal;
   font-weight: 400;
   font-size: 18px;
   line-height: 110.00000000000001%;
-  letter-spacing: 0%;
-  /* color: rgba(255, 255, 255, 1);
-  background-blend-mode: soft-light; */
+  letter-spacing: 0;
+  
   margin-left: 16px;
+  /* background: rgba(255, 255, 255, .5); */
+  /* mix-blend-mode: luminosity ; */
 }
 
 .hide_item_descr p {
-  color: rgba(255, 255, 255, 1);
-  background-blend-mode: soft-light;
+  display: inline-block;
+  background: linear-gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .4));
+  background-blend-mode: soft-light; 
+  -webkit-background-clip: text;
+  color: transparent;
+  transition: all .5s ease;
+}
+
+ .hide_item:hover .hide_item_descr p {
+  background: linear-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 1));
+  background-blend-mode: overlay;
+  /* background-blend-mode: soft-light;  */
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
 .item_right_wrap {
@@ -228,12 +242,25 @@
   line-height: 100%;
   letter-spacing: 0%;
   text-align: center;
-  color: #fff;
+  /* color: #fff; */
   margin-bottom: 6px;
+  display: inline-block;
+  background: linear-gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .4));
+  background-blend-mode: soft-light; 
+  -webkit-background-clip: text;
+  color: transparent;
+  transition: all .5s ease;
 }
 
 .hide_footer_link:last-child {
   margin-bottom: 0;
+}
+
+.hide_footer_link:hover {
+  background: linear-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 1));
+  background-blend-mode: overlay;
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
 .open img{
