--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -6,6 +6,10 @@
   justify-content: center;
 }
 
+.gallery_title {
+  text-align: center;
+}
+
 .gallery_wrap {
   width: 100%;
   margin-top: 72px;
@@ -50,7 +54,7 @@
 .left_descr_wrap {
   display: flex;
   flex-direction: column;
-  align-items:center;
+  align-items: center;
   justify-content: center;
 }
 
@@ -68,25 +72,20 @@
   font-weight: 400;
   font-size: 14px;
   color: #4e4c4b;
-  
 }
-
-
 
 .arrow_btn.black_btn.left_arrow {
   width: 32px;
   height: 25px;
   display: flex;
   align-items: center;
-  justify-content: center;
-  
+  justify-content: center;  
 }
 
 .arrow_btn.black_btn.left_arrow img {
   width: 13px;
   transform: rotate(180deg);
 }
-
 
 .gallery_item_icon {
   position: absolute;
@@ -121,28 +120,12 @@
   border-radius:16px
 }
 
-/* .gallery_item_link {
-  width: 100%;
-  display: block;
-  height: 100%;
-  border-radius:16px
-} */
-
-/* .gallery_item_link img {
-  width: 100%;
-  height: 100%;
-  border-radius:16px
-} */
-
-
-
 .right_descr {
   position: absolute;
   width: 123px;
   height: 100%;
   display: flex;
   align-items: center;
-  /* justify-content: space-between; */
   right: 0;
   opacity: 0;
 }
@@ -151,7 +134,6 @@
   display: flex;
   width: 100%;
   align-items: center;
-  /* justify-content: space-between; */
 }
 
 .right_text {
@@ -162,7 +144,6 @@
   letter-spacing: 0%;
   text-align: center;
   color: #0A0A0C;
-  /* margin-top: 10px; */
   margin-left: 4px;
 }
 
@@ -179,13 +160,9 @@
   filter: grayscale(0);
 }
 
-.item_wide a{ 
+.item_wide a { 
   width: 471px;
 }
-
-/* .item_wide.gallery_item_link {
-  width: 471px;
-} */
 
 .item_wide .left_descr { 
   opacity: 1;
@@ -197,4 +174,92 @@
 
 .item_narrow {
   width: 137px;
+}
+
+@media (max-width: 1230px) {
+  .gallery {
+    max-width:1000px;
+  }
+  .item_wide {
+    width: 458px;
+  }
+  .item_wide a { 
+    width: 200px;
+  }
+  .item_narrow {
+    width: 124px;
+  }
+}
+
+@media (max-width: 1026px) {
+  .gallery {
+    max-width: 956px;
+  }
+  .gallery_title .scroll_title {
+    font-size: 36px;
+  }
+  .gallery_title .scroll_sp {
+    font-size: 36px;
+  }
+  .item_wide {
+    width: 478px;
+  }
+  .item_wide a { 
+    width: 218px;
+  }
+  .item_narrow {
+    width: 144px;
+  }
+}
+
+@media (max-width: 992px) {
+  .gallery {
+    overflow: hidden;
+  }
+  .gallery_wrap {
+    margin-top: 72px;
+  }
+  .gallery_wrap.desctop_gallery {
+    display: none;
+  }
+}
+
+
+@media (max-width: 769px) {
+  .gallery_wrap {
+    margin-top: 40px;
+  }
+  .gallery_title {
+    max-width: 440px;
+
+  }
+  .gallery_title .scroll_title {
+    font-size: 32px;
+  }
+  .gallery_title .scroll_sp {
+    font-size: 32px;
+  }
+  .gallery_title .scroll_descr {
+    font-size: 18px;
+    
+  }
+  
+}
+
+@media (max-width: 500px) {
+  .gallery_title {
+    max-width: 351px;
+  }
+  .gallery_title .scroll_title {
+    font-size: 24px;
+  }
+  .gallery_title .scroll_sp {
+    font-size: 24px;
+  }
+  .gallery_title .scroll_descr {
+    font-size: 14px;
+  }
+  .gallery_wrap {
+    margin-top: 32px;
+  }
 }
