--- a/styles/hide-menu.css
+++ b/styles/hide-menu.css
@@ -2,37 +2,30 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  z-index: 50;
+  z-index: 500;
   width: 100%;
-  /* max-width: 456px; */
-  /* height: 539px; */
-  height: 0;
+  height: 539px;
   opacity: 0;
-  /* display: flex;
-  flex-direction: column; */
-  /* padding: 16px; */
-  /* align-items: center;
-  justify-content: space-between; */
+  visibility: hidden;
   border-radius: 24px;
-  /* backdrop-filter: blur(100px); */
-  /* box-shadow: inset 0 0 22px 0 rgba(242, 242, 242, 0.1), inset 0 0 0 1px rgba(255, 255, 255, 0.07), inset -2px -2px 1px -2px rgba(255, 255, 255, 0.7), inset 2px 2px 1px -2px rgba(255, 255, 255, 0.7), inset 3px 3px 0px -3px #fff; */
-  /* background: rgba(255, 255, 255, 0.1); */
-	/* background-color: rgba(255, 255, 255, 0.06); */
-	/* mix-blend-mode: screen; */
-	/* box-shadow: 3px 3px 0.5px -3.5px rgba(255, 255, 255, 0.7) inset, 2px 2px 1px -2px rgba(255, 255, 255, 0.7) inset, -2px -2px 1px -2px rgba(255, 255, 255, 0.7) inset, 0px 0px 0px 1px rgba(255, 255, 255, 0.07) inset, 0px 0px 22px 0px rgba(242, 242, 242, 0.10) inset; */
-	/* backdrop-filter: blur(32.5px); */
-	/* -webkit-backdrop-filter: blur(32.5px); */
   background-color: rgba(255, 255, 255, 0.06);
 	box-shadow: 3px 3px 0.5px -3.5px rgba(255, 255, 255, 0.7) inset, 2px 2px 1px -2px rgba(255, 255, 255, 0.7) inset, -2px -2px 1px -2px rgba(255, 255, 255, 0.7) inset, 0px 0px 0px 1px rgba(255, 255, 255, 0.07) inset, 0px 0px 22px 0px rgba(242, 242, 242, 0.10) inset;
 	backdrop-filter: blur(32.5px);
   -webkit-backdrop-filter: blur(32.5px);
-  /* transform: translateY(140%); */
-  transition: all .5s ease-in-out;
+  transform: translateY(100%);
+  transition: all .5s ease;
 }
 
-.show_menu {
-  height: 539px;
+.show_mobile_menu {
   opacity: 1;
+  visibility: visible;
+  transform: translateY(0%);
+}
+
+.hide_mobile_menu {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(100%);
 }
 
 .nav_hide_blur {
@@ -77,7 +70,6 @@
   display: flex;
   width: 33px;
   height: 16px;
-  /* align-items: flex-end; */
   justify-content: space-between;
 }
 
@@ -140,14 +132,6 @@
   justify-content: space-between;
   padding: 8px 16px;
   transition: all .5s ease;
-  
-  /* background: 
-    linear-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 1)),
-    linear-gradient(rgba(224, 97, 97, 1), rgba(224, 97, 97, 1)),
-    linear-gradient(rgba(255, 255, 255, .1), rgba(255, 255, 255, .1));
-    
-  background-blend-mode: soft-light; */
-  
 }
 
 .hide_item:hover {
@@ -171,11 +155,6 @@
   
 }
 
-/* .hide_item_img video {
-  max-width: 100%;
-  border-radius: 12px;
-} */
-
 .hide_item_img video {
   width: 100%;
   height: 100%;
@@ -183,16 +162,12 @@
 }
 
 .hide_item_descr {
-  /* width: 100%; */
   font-family: Neue Montreal;
   font-weight: 400;
   font-size: 18px;
   line-height: 110.00000000000001%;
   letter-spacing: 0;
-  
   margin-left: 16px;
-  /* background: rgba(255, 255, 255, .5); */
-  /* mix-blend-mode: luminosity ; */
 }
 
 .hide_item_descr p {
@@ -207,7 +182,6 @@
  .hide_item:hover .hide_item_descr p {
   background: linear-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 1));
   background-blend-mode: overlay;
-  /* background-blend-mode: soft-light;  */
   -webkit-background-clip: text;
   color: transparent;
 }
@@ -243,7 +217,6 @@
   line-height: 100%;
   letter-spacing: 0%;
   text-align: center;
-  /* color: #fff; */
   margin-bottom: 6px;
   display: inline-block;
   background: linear-gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .4));
