--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,23 +1,18 @@
 .menu_fixed {
   position: fixed;
   left: 50%;
-  bottom: 6%;
+  bottom: 2.4%;
   z-index: 100;
   width: 100%;
   max-width: 456px;
   margin: 0 auto;
-  /* height: 100vh; */
   background: transparent; 
   transform: translateX(-50%);
-  /* display: none; */
-  
 }
-
-
 
 .menu_scroll {
   max-width: 456px;
-  
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -28,12 +23,6 @@
   align-items: center;
   justify-content: center;
   border-radius: 24px;
-  /* padding: 8px; */
-  /* backdrop-filter: blur(100px);
-  -webkit-backdrop-filter: blur(100px);
-  box-shadow: inset 0 0 22px 0 rgba(242, 242, 242, 0.1), inset 0 0 0 1px rgba(255, 255, 255, 0.07), inset -2px -2px 1px -2px rgba(255, 255, 255, 0.7), inset 2px 2px 1px -2px rgba(255, 255, 255, 0.7), inset 3px 3px 0px -3px #fff;
-  background: rgba(255, 255, 255, 0.1); */
-  
 	background-color: rgba(255, 255, 255, 0.06);
 	box-shadow: 3px 3px 0.5px -3.5px rgba(255, 255, 255, 0.7) inset, 2px 2px 1px -2px rgba(255, 255, 255, 0.7) inset, -2px -2px 1px -2px rgba(255, 255, 255, 0.7) inset, 0px 0px 0px 1px rgba(255, 255, 255, 0.07) inset, 0px 0px 22px 0px rgba(242, 242, 242, 0.10) inset;
 	backdrop-filter: blur(32.5px);
@@ -67,7 +56,6 @@
 .nav_logo_wrap {
   display: flex;
   align-items: center;
-  
 }
 
 .nav_logo {
@@ -78,7 +66,6 @@
   justify-content: center;
   border-radius: 100%;
   background: #0A0A0C;
-
 }
 
 .nav_logo img {
@@ -112,7 +99,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  /* padding: 4px 10px; */
   border-radius: 22px;
   margin-left: 8px;
   background: #0A0A0C;
@@ -122,4 +108,16 @@
 
 .open img {
   width: 16px;
+}
+
+@media (max-width: 450px) {
+  .menu_fixed {
+    max-width: 352px;
+  }
+}
+
+@media (max-width: 360px) {
+  .menu_fixed {
+    max-width: 342px;
+  }
 }
