--- a/styles/slider.css
+++ b/styles/slider.css
@@ -14,12 +14,12 @@ video {
   height: 100vh;
 }
 
-.swiper-slide {
+.mySwiper2 .swiper-slide {
   background-size: cover;
   background-position: center;
 }
 
-.swiper-slide {
+.mySwiper1.swiper-slide {
   width: 321px;
   display: flex;
   justify-content: center;
@@ -33,72 +33,29 @@ video {
   opacity: 1;
 }
 
-.mySwiper {
+.mySwiper1 {
   width: 100%;
   height: 68px;
   box-sizing: border-box;
-  /* padding: 10px 0; */
   margin-top: 44px;
 }
 
-/* .progress-pagination {
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  gap: 8px;
-  z-index: 10;
-} */
-
-/* .progress-bar {
-  width: 50px;
-  height: 4px;
-  background: rgba(255,255,255,0.3);
-  overflow: hidden;
-  position: relative;
-  border-radius: 2px;
-} */
-
-/* .progress-bar span {
-  content: '';
-  position: absolute;
-  height: 100%;
-  width: 0%;
-  /* background: #fff; 
-  animation: progress linear forwards;
-} */
-
-/* @keyframes progress {
-  from { width: 0%; }
-  to { width: 100%; }
-} */
-
-
-
-
-
-
-.mySwiper {
-  width: 100%;
+.mySwiper1 {
+  width: 80vw;
   height: 69px;
   box-sizing: border-box;
-  /* padding: 10px 0; */
   margin-top: 44px;
 }
 
-.mySwiper .swiper-wrapper {
+.mySwiper1 .swiper-wrapper {
   margin-top: 15px;
 }
-.mySwiper .swiper-slide {
-  width: 320px!important;
+.mySwiper1 .swiper-slide {
   height: 100%;
   opacity: 0.4;
-  gap: 20px;
-  /* margin-right: 20px!important; */
 }
 
-.mySwiper .swiper-slide-thumb-active {
+.mySwiper1 .swiper-slide-thumb-active {
   opacity: 1;
 }
 
@@ -114,31 +71,17 @@ h3 {
   color: #fff
 }
 
-/* .swiper-pagination {
-  margin-bottom: 44px; 
-  position: relative;
-} */
-
-/* .swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
-  background: #fff
-} */
-
 .swiper-pagination-progressbar.swiper-pagination-horizontal {
   height: 1px;
   width: 100%;
   background: rgba(255, 255, 255, 0.1);
   transform: translateX(0);
-  /* background: transparent */
-  /* width: 320px; */
 }
 
 .swiper-pagination-progressbar.swiper-pagination-horizontal
  .swiper-pagination-progressbar-fill {
   background: rgba(255, 255, 255);
-  /* width: 50% !important;
-  left: 25%; */
 }
 
-/* .swiper-scrollbar-drag {
-  background: #fff;
-} */
+
+
